--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    Hello world
+<div class="main">
+    <div class="left"></div>
+    <div class="right"></div>
+</div>
 </body>
 </html>
